objects/Account.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business_Unit</label>
        <picklist>
            <picklistValues>
                <fullName>AutoRABIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPM Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Champ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emerging Technologies</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_URL__c</fullName>
        <label>Company URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <picklist>
            <picklistValues>
                <fullName>Copado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flosum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jitterbit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Odaseva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gearset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AssureClick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dream factory – Snapshot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dream factory – Cascade &amp; others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlassian - Bamboo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlassian - Others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Shows when Subscription is expiring.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Other_Competitors__c</fullName>
        <label>Other Competitors</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Amount__c</fullName>
        <description>Dollar Amount for PS hours</description>
        <label>PS Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Email__c</fullName>
        <label>Primary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Record_Owner_From_Vtiger__c</fullName>
        <label>Record Owner From Vtiger</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Notice_Sent__c</fullName>
        <label>Renewal Notice Sent</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Shows Start Date for Subscription</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subs_Amount__c</fullName>
        <description>Shows Amount for Subscriptions</description>
        <label>Subs Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Support_Amount__c</fullName>
        <description>Shows Amount for Support Hrs</description>
        <label>Support Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_PO_Amount__c</fullName>
        <formula>PS_Amount__c  +   Subs_Amount__c  +  Support_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total PO Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_PS_Hrs__c</fullName>
        <description>Created to show Total PS Hrs of Account -across multiple Opps.</description>
        <label>Total PS Hrs</label>
        <summarizedField>Opportunity.PS_Hrs__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Unresponsive, Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Subscriptions__c</fullName>
        <description>Shows Total no of Subscriptions per account -across multiple Opps.</description>
        <label>Total Subscriptions</label>
        <summarizedField>Opportunity.No_of_Subscriptions__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notContain</operation>
            <value>Unresponsive, Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>Record_Owner_From_Vtiger__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>AutoRABIT_Pipeline</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT_SOURCE</columns>
        <columns>ACCOUNT.OWNERSHIP</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <columns>ACCOUNT.SALES</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>bb,nroka,pd’so,vdatl</value>
        </filters>
        <label>AutoRABIT Pipeline</label>
        <sharedTo>
            <group>AutoRABIT_Sales_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BPM_Accounts</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>PSK</value>
        </filters>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>BPM Services</value>
        </filters>
        <label>BPM Accounts</label>
        <sharedTo>
            <role>AutoRABIT</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Primary_Email__c</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Account</fullName>
        <active>true</active>
        <label>Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>